$NetBSD: ChangeLog,v 1.9 2014/11/04 22:38:26 agc Exp $


Mon Nov  3 21:43:20 UTC 2014	lukem

	* Release as "tnftp 20141104".

Fri Oct 31 08:32:28 UTC 2014	lukem

	* Use '=' not '==' with test in configure.

	* Check for <sys/uio.h> for writev() declaration.

Fri Oct 31 04:07:38 UTC 2014	lukem

	* Release as "tnftp 20141031".

	* Merge NetBSD usr.bin/ftp from 20130220 to 20141026:
		- Don't pay attention to special characters if they don't
		  come from the command line (from jmcneill).
		  Fixes CVE-2014-8517.
		- PR/34796: Hauke Fath: ftp does not timeout on http fetches.

Sun May  5 13:51:47 UTC 2013	lukem

	* Release as "tnftp 20130505"
	
	* Implement --enable-ssl (and --with-openssl) to enable
	  https:// fetch support.

	* Merge NetBSD ftp from 20090520 to 20130220.  Changes:
		- https:// support.
		  NetBSD problem report 47276 from NONAKA Kimihiro.
		- Allow -R to restart non-existent ftp:// URIs.
		- Don't assume AF_INET support is available.
		  FreeBSD problem report 162661.
		- Parse HTTP 'Date' entries in the `C' locale rather than the
		  user's.
		  NetBSD problem report 42917 from KAMADA Ken'ichi.
		- Improve error handling when parsing of URI scheme.
		- Silence connection warnings to multi-homed hosts in
		  non-verbose mode.
		- Fix compile warnings.
		- In ftpvis(), prevent incomplete escape sequences at end of
		  dst, and ensure NUL-termination of dst.
		  Fix from Uwe Stuehler and Stefan Sperling, via Marc Balmer.
		- When using the response to SYST to decide whether to
		  default to 'binary' be a lot less specific.

	* Replace glob with newer copy from NetBSD that does not suffer
	  from DoS exhaustion attacks.
	  Fix in NetBSD from Maksymilian Arciemowicz.  See CVE-2011-0418

Tue Jan 12 06:58:15 UTC 2010	lukem

	* Release as "tnftp 20100108"

	* Rename onoff() argument "bool" to "val".

Tue Jan  5 09:12:01 UTC 2010	lukem

	* If ARG_MAX isn't defined, use the result from sysconf(_SC_ARG_MAX).
	  Fixes build when using newer glibc.
